# quantlop

./: .clang-format  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  LICENSE  README.md  hamiltonian.py  identity.py  pauli.py  pyproject.toml  requirements.txt  simulation.py
.github/workflows/: ci.yml  docs.yml  pypi.yml
benchmark/: memory.json  plot.py  run.py  runtime.json
cpp/bindings/: python_bindings.cpp
cpp/include/quantlop/: hamiltonian.hpp  matvec.hpp  pauliword.hpp  simulation.hpp  types.hpp
cpp/src/: hamiltonian.cpp  krylov.cpp  matvec.cpp  pauliword.cpp  simulation.cpp
docs/: api-reference.rst  api.rst  conf.py  development.rst  getting-started.rst  index.rst  overview.rst
docs/api/: evolve.rst  hamiltonian.rst  pauliword.rst
python/quantlop/: __init__.py  evolution.py  hamiltonian.py  pauliword.py
qilops/: paulis.py
src/: hamiltonian.py  pauli.py
src/quantlop/: __init__.py  hamiltonian.py  pauli.py  pauliword.py  simulation.py
test/: test_simulation.py  utils.py
tests/: test_evolution.py  test_hamiltonian.py  test_pauliword.py
tests/cpp/: test_core.cpp
tests/python/: test_against_scipy.py  test_simulation.py  utils.py
